Implementação de Envio de Email.

--- a/UserNotification.Application/appsettings.json
+++ b/UserNotification.Application/appsettings.json
@@ -1,13 +1,20 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "SQLServer": "Server=SERVER_HERE;Database=UsersNotifications;User Id=USER_HERE;Password=PASSWOR_HERE;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLServer": "Server=SERVER_HERE;Database=UsersNotifications;User Id=USER_HERE;Password=PASSWORD_HERE;"
+  },
+  "EmailSettings": {
+    "Mail": "EMAIL_HERE",
+    "DisplayName": "NAME_HERE",
+    "Password": "PASSWORD_HERE",
+    "Host": "smtp.office365.com", // "smtp.gmail.com"
+    "Port": 587
+  }
 }
